- fixed some build issues (libraries)

--- a/trunk/CMakeLists.txt
+++ b/trunk/CMakeLists.txt
@@ -32,10 +32,18 @@ set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${qsldcalc_SOURCE_DIR}/bin)
 
 # libcfp library related settings
 find_path(libcfp_INCLUDE_DIR cfp/cfp.h
-	PATHS ${qsldcalc_SOURCE_DIR}/../libcfp/trunk/include
+	PATHS
+	${qsldcalc_SOURCE_DIR}/../libcfp/include
+	${qsldcalc_SOURCE_DIR}/../libcfp/trunk/include
+	${qsldcalc_SOURCE_DIR}/../../libcfp/include
+	${qsldcalc_SOURCE_DIR}/../../libcfp/trunk/include
 )
 find_library(libcfp_LIBRARY libcfp_static${CMAKE_STATIC_LIBRARY_SUFFIX}
-	PATHS ${qsldcalc_SOURCE_DIR}/../libcfp/trunk/lib/
+	PATHS
+	${qsldcalc_SOURCE_DIR}/../libcfp/lib/
+	${qsldcalc_SOURCE_DIR}/../libcfp/trunk/lib/
+	${qsldcalc_SOURCE_DIR}/../../libcfp/lib/
+	${qsldcalc_SOURCE_DIR}/../../libcfp/trunk/lib/
 )
 
 # compiler related settings
@@ -44,7 +52,7 @@ set(CMAKE_CXX_FLAGS_DEBUG -g)
 #set(CMAKE_CXX_FLAGS_RELEASE "-O3 -mfpmath=sse -msse -m3dnow -msse2 -msse3")
 set(CMAKE_CXX_FLAGS_RELEASE "-O2")
 #message("CMAKE_EXE_LINKER_FLAGS: ${CMAKE_EXE_LINKER_FLAGS}")
-set(CMAKE_EXE_LINKER_FLAGS "-static")
+#set(CMAKE_EXE_LINKER_FLAGS "-static")
 message(STATUS ":: Configuring for >${CMAKE_BUILD_TYPE}< build")
 
 set(qsldcalc_version 0.5)
